force-app/main/default/objects/New_Dealer_Training__c/fields/Support_Training_Resources__c.field-meta.xml
<CustomField>
    <fullName>Support_Training_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support &amp; Training Resources</label>
    <type>Checkbox</type>
</CustomField>