force-app/main/default/objects/New_Dealer_Training__c/fields/Supporting_your_Techs_in_the_Field__c.field-meta.xml
<CustomField>
    <fullName>Supporting_your_Techs_in_the_Field__c</fullName>
    <label>Supporting your Techs in the Field</label>
    <type>Date</type>
</CustomField>