force-app/main/default/objects/New_Dealer_Training__c/fields/Telemarketing_Policy__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Policy__c</fullName>
    <label>Telemarketing Policy</label>
    <type>Date</type>
</CustomField>