force-app/main/default/objects/New_Dealer_Training__c/fields/Training_Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Training_Welcome_Email_Sent__c</fullName>
    <label>Training Welcome Email Sent</label>
    <type>Date</type>
</CustomField>