force-app/main/default/objects/New_Dealer_Training__c/fields/Verified_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Verified_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Welcome Email</label>
    <type>Checkbox</type>
</CustomField>