force-app/main/default/objects/New_Dealer_Training__c/fields/Verify_Affiliate_ID__c.field-meta.xml
<CustomField>
    <fullName>Verify_Affiliate_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Affiliate ID</label>
    <type>Checkbox</type>
</CustomField>