force-app/main/default/objects/New_Dealer_Training__c/fields/Verify_POC_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Verify_POC_Contact_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify POC &amp; Contact Info</label>
    <type>Checkbox</type>
</CustomField>