force-app/main/default/objects/New_Dealer_Training__c/fields/Viasat_Plans__c.field-meta.xml
<CustomField>
    <fullName>Viasat_Plans__c</fullName>
    <label>Viasat Plans</label>
    <type>Date</type>
</CustomField>