force-app/main/default/objects/New_Dealer_Training__c/fields/W_W_ACD_Org_5G_Business_Internet__c.field-meta.xml
<CustomField>
    <fullName>W_W_ACD_Org_5G_Business_Internet__c</fullName>
    <label>W&amp;W ACD Org: 5G Business Internet</label>
    <type>Date</type>
</CustomField>