force-app/main/default/objects/New_Dealer_Training__c/fields/W_W_ACD_Org_BuSS__c.field-meta.xml
<CustomField>
    <fullName>W_W_ACD_Org_BuSS__c</fullName>
    <label>W&amp;W ACD Org: BuSS</label>
    <type>Date</type>
</CustomField>