force-app/main/default/objects/New_Dealer_Training__c/fields/W_W_ACD_Org_Mobility_Solutions__c.field-meta.xml
<CustomField>
    <fullName>W_W_ACD_Org_Mobility_Solutions__c</fullName>
    <label>W&amp;W ACD Org: Mobility Solutions</label>
    <type>Date</type>
</CustomField>