force-app/main/default/objects/New_Dealer_Training__c/fields/Warm_Transfer_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Warm_Transfer_Training_Complete__c</fullName>
    <label>Warm Transfer Training Complete</label>
    <type>Date</type>
</CustomField>