force-app/main/default/objects/New_Dealer_Training__c/fields/Welcome_Email_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Call_Complete__c</fullName>
    <label>Welcome Call Completed Date</label>
    <type>Date</type>
</CustomField>