force-app/main/default/objects/New_Dealer_Training__c/fields/Welcome_to_Viasat_Retailer_Sales__c.field-meta.xml
<CustomField>
    <fullName>Welcome_to_Viasat_Retailer_Sales__c</fullName>
    <label>Welcome to Viasat Retailer Sales</label>
    <type>Date</type>
</CustomField>