force-app/main/default/objects/New_Dealer_Training__c/fields/What_s_Next__c.field-meta.xml
<CustomField>
    <fullName>What_s_Next__c</fullName>
    <label>What&apos;s Next?</label>
    <type>Date</type>
</CustomField>