force-app/main/default/objects/New_Dealer_Training__c/fields/Windstream_T_E__c.field-meta.xml
<CustomField>
    <fullName>Windstream_T_E__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windstream T&amp;E</label>
    <type>Checkbox</type>
</CustomField>