force-app/main/default/objects/New_Dealer_Training__c/fields/Winsales_Overview_D2D_Only__c.field-meta.xml
<CustomField>
    <fullName>Winsales_Overview_D2D_Only__c</fullName>
    <label>Winsales Overview (D2D Only)</label>
    <type>Date</type>
</CustomField>