force-app/main/default/objects/New_Dealer_Training__c/fields/X2nd_month_Activations_Estimated__c.field-meta.xml
<CustomField>
    <fullName>X2nd_month_Activations_Estimated__c</fullName>
    <label>2nd month Activations Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>