force-app/main/default/objects/New_Dealer_Training__c/fields/X3rd_month_Activations_Estimated__c.field-meta.xml
<CustomField>
    <fullName>X3rd_month_Activations_Estimated__c</fullName>
    <label>3rd month Activations Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>