force-app/main/default/objects/New_Dealer_Training__c/fields/X90_Day_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>X90_Day_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>90 Day Follow up</label>
    <type>Checkbox</type>
</CustomField>