force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Brightspeed.recordType-meta.xml
<RecordType>
    <fullName>Brightspeed</fullName>
    <active>true</active>
    <label>Brightspeed</label>
</RecordType>