force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Brinks.recordType-meta.xml
<RecordType>
    <fullName>Brinks</fullName>
    <active>true</active>
    <label>Brinks</label>
</RecordType>