force-app/main/default/objects/New_Dealer_Training__c/recordTypes/EarthLink.recordType-meta.xml
<RecordType>
    <fullName>EarthLink</fullName>
    <active>true</active>
    <label>EarthLink</label>
</RecordType>