force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Frontier.recordType-meta.xml
<RecordType>
    <fullName>Frontier</fullName>
    <active>true</active>
    <label>Frontier</label>
</RecordType>