force-app/main/default/objects/New_Dealer_Training__c/recordTypes/MDP.recordType-meta.xml
<RecordType>
    <fullName>MDP</fullName>
    <active>true</active>
    <label>MDP</label>
</RecordType>