force-app/main/default/objects/New_Dealer_Training__c/recordTypes/MDP_ISP.recordType-meta.xml
<RecordType>
    <fullName>MDP_ISP</fullName>
    <active>true</active>
    <label>MDP ISP</label>
</RecordType>