force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Optimum_COM.recordType-meta.xml
<RecordType>
    <fullName>Optimum_COM</fullName>
    <active>true</active>
    <label>Optimum COM</label>
</RecordType>