force-app/main/default/objects/New_Dealer_Training__c/recordTypes/SafeHaven.recordType-meta.xml
<RecordType>
    <fullName>SafeHaven</fullName>
    <active>true</active>
    <label>SafeHaven</label>
</RecordType>