force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Spectrum_COM.recordType-meta.xml
<RecordType>
    <fullName>Spectrum_COM</fullName>
    <active>true</active>
    <label>Spectrum COM</label>
</RecordType>