force-app/main/default/objects/New_Dealer_Training__c/recordTypes/T_Mobile.recordType-meta.xml
<RecordType>
    <fullName>T_Mobile</fullName>
    <active>true</active>
    <label>T-Mobile</label>
</RecordType>