force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Telogix.recordType-meta.xml
<RecordType>
    <fullName>Telogix</fullName>
    <active>true</active>
    <label>Telogix</label>
</RecordType>