force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Verizon_D2D_COM.recordType-meta.xml
<RecordType>
    <fullName>Verizon_D2D_COM</fullName>
    <active>true</active>
    <label>Verizon D2D/COM</label>
</RecordType>