force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Verizon_D2D_RES.recordType-meta.xml
<RecordType>
    <fullName>Verizon_D2D_RES</fullName>
    <active>true</active>
    <label>Verizon D2D/RES</label>
</RecordType>