force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Viasat.recordType-meta.xml
<RecordType>
    <fullName>Viasat</fullName>
    <active>true</active>
    <label>Viasat</label>
</RecordType>