force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Windstream.recordType-meta.xml
<RecordType>
    <fullName>Windstream</fullName>
    <active>true</active>
    <label>Windstream</label>
</RecordType>