force-app/main/default/objects/New_Dealer_Training__c/recordTypes/Xfinity.recordType-meta.xml
<RecordType>
    <fullName>Xfinity</fullName>
    <active>true</active>
    <label>Xfinity</label>
</RecordType>