force-app/main/default/objects/New_Dealer_Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discuss_Current_Dealer_Comp_SPIFs__c</columns>
    <columns>Current_Month_Incentives__c</columns>
    <columns>Discuss_Go_To_Market_Strategy__c</columns>
    <columns>Discuss_Marketing_Campaign__c</columns>
    <columns>Order_Entry_Setup__c</columns>
    <columns>Estimated_Number_of_Sellers__c</columns>
    <columns>Full_Potential_Monthly_Activations__c</columns>
    <columns>Discuss_PV_Sales_and_Support_Structure__c</columns>
    <columns>Establish_306090_day_sales_plan__c</columns>
    <columns>X30_Day_Follow_up__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>